tests/subtyping/try-cast-as/ill-typed/try-cast-as-3.stella
language core;
extend with #try-cast-as;

fn main(x : Nat) -> Bool {
  return
    try { x } cast as Nat {
      y => y
    } with { false }
}
